[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/items/TDoor.gd" type="Script" id=1]
[ext_resource path="res://scenes/items/TItem.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/pics/exitdoor_left.png" type="Texture" id=3]
[ext_resource path="res://assets/pics/exitdoor_right.png" type="Texture" id=4]
[ext_resource path="res://assets/pics/exitdoor_central.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "close"
tracks/0/type = "value"
tracks/0/path = NodePath("ExitDoorLeft:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 5, 15 ), Vector2( 15, 15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExitDoorRight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 35, 15 ), Vector2( 25, 15 ) ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("ExitDoorLeft:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 15, 15 ), Vector2( 5, 15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExitDoorRight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 25, 15 ), Vector2( 35, 15 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1.26596, 6.26569 )

[node name="TDoor" type="Node2D"]
script = ExtResource( 1 )

[node name="Animator" type="AnimationPlayer" parent="."]
anims/close = SubResource( 1 )
anims/open = SubResource( 2 )

[node name="ExitDoorCentral" type="Sprite" parent="."]
position = Vector2( 20, 20 )
texture = ExtResource( 5 )

[node name="ExitDoorLeft" type="Sprite" parent="."]
position = Vector2( 15, 15 )
texture = ExtResource( 3 )

[node name="ExitDoorRight" type="Sprite" parent="."]
position = Vector2( 25, 15 )
texture = ExtResource( 4 )

[node name="PushButton" parent="." instance=ExtResource( 2 )]
position = Vector2( -10, 0 )
init_frame = 202

[node name="ExitZone" parent="." instance=ExtResource( 2 )]
position = Vector2( 15, 20 )
init_frame = 239

[node name="Sprite" parent="ExitZone" index="0"]
frame = 239

[node name="CollisionShape2D" parent="ExitZone" index="1"]
position = Vector2( 5.11136, 3.77502 )
shape = SubResource( 3 )

[node name="VickPosition" type="Position2D" parent="."]
position = Vector2( 20, 30 )

[connection signal="body_entered" from="PushButton" to="." method="_on_push_button_body_entered"]
[connection signal="body_entered" from="ExitZone" to="." method="_on_exitzone_body_entered"]

[editable path="ExitZone"]
